fix testimonial indicators going to next line on small screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -770,7 +770,7 @@ a:hover {
 .indicators {
     position: absolute;
     bottom: 0;
-    left: 45%;
+    left: 40%;
     transform: translateX(-50%);
 }
 
